<resources>
    <string name="app_name">Target Guys Nearby</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_signup">SignUpActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="SignUpButton">Sign Up</string>
    <string name="LogInButton">Log In</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="name_label">Name:</string>
    <string name="email_label">Email:</string>
    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>

    <string name="gender_label">Gender</string>

    <string name="alreadyHaveAccountButton">Already have an account? Log In</string>
    <string name="dontHaveAccountButton">Dont have an account yet? Sign Up</string>
    <string name="logout">Log Out</string>
    <string name="searchButton">Search</string>

    <string name="facebook_app_id">755245647932115</string>
    <string name="title_activity_interest">InterestActivity</string>
    <string name="title_activity_messages">View MessagesActivity</string>
    <string name="action_search">Search</string>
    <string name="no_interest_category_data">No categories to display.</string>
    <string name="title_activity_user_details">UserDetailsActivity</string>
    <string name="gender">Gender</string>
    <string name="interests">Interests</string>
    <string name="view_interests">Add Interests</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="map_search">MapSearch</string>
    <string name="DistanceText">Enter Distance in Miles</string>

    <string name="hello_world">Hello world!</string>

    <!--Gender spinner options:-->
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!--Options for getting a new profile picture:-->
    <string-array name="get_profile_picture_array">
        <item>Take photo</item>
        <item>Get existing photo</item>
    </string-array>
    <string name="title_activity_main_category">MainCategoryActivity</string>
    <string name="title_activity_distance">DistanceActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="message_hint">Say anything</string>
    <string name="send">Send</string>

    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other Profile Pic</string>
    <string name="title_activity_view_messages">ViewMessages</string>


</resources>
