<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_weight="0.28"
        android:weightSum="1">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:context=".ProfileActivity"
            android:layout_gravity="center_horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/profilePicture"
                android:src="@mipmap/androidprofileimage"
                android:layout_gravity="center_horizontal|top"
                android:onClick="getNewProfilePicture"
                tools:ignore="ContentDescription"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000" />

        </FrameLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center_horizontal">



            <TableRow
                android:id="@+id/nameTableRow"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="right"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/name"
                    tools:ignore="RtlHardcoded" />
                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="left"
                    android:textSize="16sp" />
            </TableRow>
            <TableRow android:layout_marginBottom="10dp">
                <View
                    android:layout_span="2"
                    android:layout_width="wrap_content"
                    android:layout_height="0.5dp"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#999" />
            </TableRow>


            <TableRow
                android:id="@+id/usernameTableRow"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="right"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/username" />
                <TextView
                    android:id="@+id/userUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="left"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow android:layout_marginBottom="10dp">
                <View
                    android:layout_span="2"
                    android:layout_width="wrap_content"
                    android:layout_height="0.5dp"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#999" />
            </TableRow>



            <TableRow
                android:id="@+id/genderTableRow"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="right"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/gender" />
                <TextView
                    android:id="@+id/userGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="left"
                    android:textSize="16sp" />
            </TableRow>


            <TableRow android:layout_marginBottom="10dp">
                <View
                    android:layout_span="2"
                    android:layout_width="wrap_content"
                    android:layout_height="0.5dp"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#999" />
            </TableRow>


            <TableRow
                android:id="@+id/interstsTableRow"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="right"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/interests" />
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="left"
                    android:textSize="16sp"
                    android:id="@+id/interestSpinner" >
                </Spinner>

            </TableRow>

        </TableLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/white_button"
        android:id="@+id/logout"
        android:text="@string/logout"
        android:onClick="logout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
